--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-modal-video": "^1.2.3",
     "next": "14.0.3",
     "next-themes": "^0.2.1",
+    "nodemailer": "^6.9.7",
     "react": "^18",
     "react-dom": "^18",
     "react-modal-video": "^2.0.1"
