--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "nodemailer": "^6.9.7",
     "react": "^18",
     "react-dom": "^18",
+    "react-easy-swipe": "^0.0.23",
+    "react-icons": "^4.12.0",
     "react-modal-video": "^2.0.1"
   },
   "devDependencies": {
