--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "node server",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@types/react-modal-video": "^1.2.3",
+    "express": "^4.18.2",
     "next": "14.0.3",
     "next-themes": "^0.2.1",
     "nodemailer": "^6.9.7",
