--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/react-modal-video": "^1.2.3",
+    "@types/react-spinner": "^0.2.3",
     "express": "^4.18.2",
     "next": "14.0.3",
     "next-themes": "^0.2.1",
