--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo",
+    "dev": "next dev",
     "build": "next build",
     "start": "next build && node server",
     "lint": "next lint"
@@ -12,6 +12,9 @@
     "@types/react-modal-video": "^1.2.3",
     "@types/react-spinner": "^0.2.3",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
+    "gray-matter": "^4.0.3",
+    "markdown-to-jsx": "^7.3.2",
     "next": "14.0.3",
     "next-themes": "^0.2.1",
     "nodemailer": "^6.9.7",
@@ -23,6 +26,7 @@
     "react-spinners": "^0.13.8"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
