--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/free-regular-svg-icons": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@types/react-modal-video": "^1.2.3",
     "@types/react-spinner": "^0.2.3",
     "express": "^4.18.2",
@@ -23,6 +26,7 @@
     "react-easy-swipe": "^0.0.23",
     "react-icons": "^4.12.0",
     "react-modal-video": "^2.0.1",
+    "react-responsive-carousel": "^3.2.23",
     "react-spinners": "^0.13.8",
     "react-syntax-highlighter": "^15.5.0"
   },
